--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
                                 <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <!-- <h4 class="three-reasons-heading uppercase">What do I do?</h4> -->
-                                <h4 class="three-reasons-heading">WHAT DO I DO?</h4>
+                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
                                 <p>
                                 I'm a skilled Full Stack Developer with a wealth of diverse
                                 life and technical experience that I bring to every project. 
@@ -136,8 +135,7 @@
                                 <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <!-- <h4 class="three-reasons-heading uppercase">What do I do?</h4> -->
-                                <h4 class="three-reasons-heading">HOW DO I DO IT?</h4>
+                                <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
                                 <p>
                                 I follow forms as well as function. I know that the aesthetics of effective 
                                 design combined with application speed, security and reliability combine to
@@ -152,8 +150,7 @@
                                 <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <!-- <h4 class="three-reasons-heading uppercase">What do I do?</h4> -->
-                                <h4 class="three-reasons-heading">WHY HIRE ME?</h4>
+                                <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
                                 <p>
                                     I work quickly and effectively in getting things built and working across the stack. I'm an excellent
                                     communicator who thrives in bright and enthusiastic teams and 
