--- a/resume.html
+++ b/resume.html
@@ -99,6 +99,38 @@
                     </div>
                    
                </div>
+               <div class="row">
+                    <div class="col">
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+                            aria-valuemax="100" style="width:90%;">
+                                <span class="sr-only">90% complete</span>
+                            </div>
+                            <span class="progress-type">HTML / HTML5</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+                            aria-valuemax="100" style="width:80%;">
+                                <span class="sr-only">90% complete</span>
+                            </div>
+                            <span class="progress-type">CSS / CSS3</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+                            aria-valuemax="100" style="width:60%;">
+                                <span class="sr-only">90% complete</span>
+                            </div>
+                            <span class="progress-type">JavaScript / HTML5</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                            aria-valuemax="100" style="width:70%;">
+                                <span class="sr-only">90% complete</span>
+                            </div>
+                            <span class="progress-type">Python</span>
+                        </div>
+                    </div>
+               </div>
             </div>
         </div>
     </section>
