--- a/resume.html
+++ b/resume.html
@@ -51,15 +51,18 @@
     </header>
     <section class="container-fluid">
         <div class="row">
-            <div class="col-md-4 bg-color-personal-info section-column">
+            <div class="col-md-4 bg-color-work-history section-column">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="section-heading uppercase">
-                            Personal Info
+                        <h3 class="history-heading uppercase">
+                            Work History
                         </h3>
                     </div>
                 </div>
-
+                <div class="timeline-item" data-dates = "02/1998 - 04/2004">
+                    <h4>National College of Art</h4>
+                    <p>Sculptor in residence</p>
+                </div>
             </div>
             <div class="col-md-8 bg-color-three-reasons">
                <div class="row">
@@ -99,7 +102,7 @@
                     </div>
                    
                </div>
-               <div class="row">
+               <div class="row progress-section">
                     <div class="col">
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
@@ -109,21 +112,21 @@
                             <span class="progress-type">HTML / HTML5</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0"
                             aria-valuemax="100" style="width:80%;">
                                 <span class="sr-only">90% complete</span>
                             </div>
                             <span class="progress-type">CSS / CSS3</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="90" aria-valuemin="0"
                             aria-valuemax="100" style="width:60%;">
                                 <span class="sr-only">90% complete</span>
                             </div>
                             <span class="progress-type">JavaScript / HTML5</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                             aria-valuemax="100" style="width:70%;">
                                 <span class="sr-only">90% complete</span>
                             </div>
