Added resume.html content

--- a/resume.html
+++ b/resume.html
@@ -59,9 +59,19 @@
                         </h3>
                     </div>
                 </div>
-                <div class="timeline-item" data-dates = "02/1998 - 04/2004">
-                    <h4>National College of Art</h4>
-                    <p>Sculptor in residence</p>
+                <div class="history-item">        
+                    <div class="timeline-item" data-dates = "03/2023 - 04/2024">
+                        <h4>CST Pharma Ltd</h4>
+                        <p>Software Support Engineer</p>
+                    </div>
+                    <div class="timeline-item" data-dates = "06/2022 - 03/2023">
+                        <h4>Ideagen Company Ltd</h4>
+                        <p>Technical Support Engineer</p>
+                    </div>
+                    <div class="timeline-item" data-dates = "10/2020 - 02/2021">
+                        <h4>Persol Systems Ltd</h4>
+                        <p>Software Support Engineer</p>
+                    </div>
                 </div>
             </div>
             <div class="col-md-8 bg-color-three-reasons">
