Add API key to interest page

--- a/interests.html
+++ b/interests.html
@@ -198,6 +198,9 @@
         </div>
 
     </footer>
+    <script>
+        const APIKey = "AIzaSyAORQMIA-4VG-PbHMY6RI6uwlWXfT8myfs";
+    </script>
     
 </body>
 </html>
