Add js folder and maps.js file to display map

--- a/interests.html
+++ b/interests.html
@@ -190,12 +190,10 @@
         </div>
 
     </footer>
-    <script>
-        const APIKey = "AIzaSyAORQMIA-4VG-PbHMY6RI6uwlWXfT8myfs";
-    </script>
-    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAORQMIA-4VG-PbHMY6RI6uwlWXfT8myfs&callback=initMap"></script>
-
     
+    <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
+    <!-- <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script> -->
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAORQMIA-4VG-PbHMY6RI6uwlWXfT8myfs&callback=initMap"></script>
+    <script src="assets/js/maps.js"></script>
 </body>
 </html>
