--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@
                             </li>
 
                             <li class="col-xs-6 col-sm-2 ui-menu-color-github menuitem">
-                                <a href="https://github.com/CleanOak" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span></a>
+                                <a href="github.html" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span></a>
                             </li>
 
                             <li class="col-xs-6 col-sm-2 ui-menu-color-download menuitem">
