--- a/github.html
+++ b/github.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/js/github-information.js"></script>
+    <script type="text/javascript" src="assets/js/github-info.js"></script>
     <title>Morgan</title>
 </head>
 <body>
@@ -45,7 +45,7 @@
                             </li>
 
                             <li class="col-xs-6 col-sm-2 ui-menu-color-github menuitem">
-                                <a href="github.html" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span></a>
+                                <a href="github.html" class="hvr-sweep-to-bottom"><i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span></a>
                             </li>
 
                             <li class="col-xs-6 col-sm-2 ui-menu-color-download menuitem">
@@ -67,7 +67,7 @@
                 <h5 class="uppercase text-center">You can also search other user profiles</h5>
 
                 <div class="center-form">
-                    <input type="text" id="gh-username" value="octocat" oninput="fetchGitHubinformation()" />
+                    <input type="text" id="gh-username" value="octocat" oninput="fetchGitHubInformation()" />
                     <div id="gh-user-data"></div>
                     <div id="gh-repo-data"></div>
                 </div>
