--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    </script>
+    
     <title>Morgan</title>
 </head>
 <body>
@@ -64,14 +69,14 @@
                 <h5 class="uppercase text-center">Let's work together</h5>
 
                 <div class="center-form">
-                    <form action="">
+                    <form id="form">
                         <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required>
-                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Name" required>
+                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required>
                         <textarea name="projectsummary" id="projectsummary" rows="5" class="form-control" 
                         placeholder="Project description" required></textarea>
                         <div class="form-row text-center">
                             <div class="col">
-                               <button type="submit" class="btn btn-secondary">Send Project Request</button> 
+                               <button id="submit-button" type="submit" class="btn btn-secondary">Send Project Request</button> 
                             </div>
                         </div>
                     </form>
@@ -146,6 +151,10 @@
         </div>
 
     </footer>
+    <script src="assets/js/sendEmail.js"></script>
+    <script type="text/javascript">
+        emailjs.init('8TpODwMV8scBpIrCj')
+      </script>
     
 </body>
 </html>
