--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,12 @@
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
     </script>
+
+    <script type="text/javascript">
+        (function() {
+            emailjs.init('8TpODwMV8scBpIrCj')
+        })(); 
+    </script>
     
     <title>Morgan</title>
 </head>
@@ -69,14 +75,14 @@
                 <h5 class="uppercase text-center">Let's work together</h5>
 
                 <div class="center-form">
-                    <form id="form">
+                    <form onsubmit="return sendMail(this);" method="POST">
                         <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required>
-                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required>
+                        <input type="email" name="emailaddress" id="emailaddress" class="form-control" placeholder="Email" required>
                         <textarea name="projectsummary" id="projectsummary" rows="5" class="form-control" 
                         placeholder="Project description" required></textarea>
                         <div class="form-row text-center">
                             <div class="col">
-                               <button id="submit-button" type="submit" class="btn btn-secondary">Send Project Request</button> 
+                               <button type="submit" class="btn btn-secondary">Send Project Request</button> 
                             </div>
                         </div>
                     </form>
@@ -152,9 +158,5 @@
 
     </footer>
     <script src="assets/js/sendEmail.js"></script>
-    <script type="text/javascript">
-        emailjs.init('8TpODwMV8scBpIrCj')
-      </script>
-    
 </body>
 </html>
